--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,25 +1,182 @@
----
-title: "Reproducible Research: Peer Assessment 1"
-output: 
-  html_document:
-    keep_md: true
----
+**Reproducible Research - Peer Assessment 1**
+=============================================
+
+#The Data set for this Assignment is "Activity monitoring data"
+
+  Assuming the data is Downloaded and Extracted at the current working directory
+
+  *Loading the dataset into R*
+
+```{r installpackage,echo=FALSE,results='hide'}
+  install.packages("knitr")
+  library(knitr)
+```
+
+```{r readingdata,echo=TRUE}
+    df1<-read.csv("activity.csv",header=TRUE,sep=",")
+```
+
+  *Processing the date into date format*
+
+```{r dataprocessing,echo=TRUE}
+  df1$date <- as.Date(df1$date,"%Y-%m-%d")
+```
+
+  *Checking for the number of entries in the data*
+
+```{r qc1,echo=TRUE}
+  nrow(df1)
+```
 
 
-## Loading and preprocessing the data
+Mean total number of steps taken per day
+----------------------------------------
+
+  *Creating a histogram for total number of Steps taken per day*
+  
+     *Removing the data entries with "NA"
+     *Aggregating the data to find sum of steps per day
+     *Plotting the Total steps per day
+     
+```{r firsthistogram,echo=TRUE}
+  df2<-df1[which(df1$steps!="NA"),]
+  df3<-aggregate(df2$steps,df2[2],sum)
+  par(mfrow = c(1, 1))
+  barplot(df3$x,names.arg=df3$date,col="Red",main="Total Steps per day",xlab="Date",ylab="Number of Steps")
+```
+```{r devoff,echo=FALSE,results='hide'}
+  dev.off()
+```
+
+  *Computing the mean of steps per day*
+  
+```{r mean,echo=TRUE}
+  mean(df3$x)
+```
+
+  *Computing the median of steps per day*
+
+```{r median,echo=TRUE}
+  median(df3$x)
+```
 
 
+Average daily activity pattern
+------------------------------
 
-## What is mean total number of steps taken per day?
+  *Creating the time series plot at 5 mins interval*
+    
+    *Aggregating the data to calculate the mean steps at 5 min interval
+    *Plotting the average steps per interval
+    
+```{r timeseries,echo=TRUE}
+  df4<-aggregate(df1$steps,df1[3],mean,na.rm=TRUE)
+  plot(x ~ interval,data=df4,type="l",xlab="interval",ylab="Average number of steps",main="Average daily activity pattern",col="blue")
+```
+
+  *Displaying the 5 min interval start and end time for maximum average number of steps*
+
+```{r maxinterval,echo=TRUE}
+df4[c(which(df4$x==max(df4$x)),which(df4$x==max(df4$x))+1),1]
+```
 
 
+Imputing missing values
+-----------------------
 
-## What is the average daily activity pattern?
+  *Total number of records with missing values in the dataset*
+  
+```{r countmissing,echo=TRUE}
+nrow(df1[(!complete.cases(df1)),])
+```
+
+  *Replacing Missing values with the interval mean averaged over all the days*
+  
+    *Aggregating to determine the mean at 5 minute interval
+    *Merging the aggregated data  to the raw data to create a new column with mean value
+    *Assigning the mean value as the number of steps if "NA
+    *Dropping the column with mean values to have a tidy dataset
+    
+
+```{r missingtreatment,echo=TRUE}
+df5<-aggregate(df1$steps,df1[3],mean,na.rm=TRUE)
+df6<-merge(x=df1,y=df5,by="interval",all.x=TRUE)
+df6$steps<- ifelse(is.na(df6$steps),round(df6$x,digits=2),df6$steps)
+df7 <- df6[,-c(4)]
+```
+    
+    *Displaying top 6 columns of new dataset
+    
+```{r head,echo=TRUE}
+head(df7)
+```
+
+    *Verifying the number of records in new dataset
+    
+```{r qc2,echo=TRUE}
+nrow(df7)
+```
+
+  *New Histogram of the total number of steps taken each day*
+    
+    *Aggregating the data to find sum of steps per day
+    *Plotting the Total steps per day
+     
+```{r secondhistogram,echo=TRUE}
+  df8<-aggregate(df7$steps,df7[3],sum)
+  par(mfrow = c(1, 1))
+  barplot(df8$x,names.arg=df8$date,col="Red",main="Total Steps per day",xlab="Date",ylab="Number of Steps")
+```
+```{r devoff2,echo=FALSE,results='hide'}
+  dev.off()
+```
+
+  *Computing the new mean of steps per day*
+  
+```{r newmean,echo=TRUE}
+  mean(df8$x)
+```
+
+  *Computing the new median of steps per day*
+
+```{r newmedian,echo=TRUE}
+  median(df8$x)
+```
+
+  *Impact of imputing missing data*
+  
+    *Histogram now shows extra bars for the earlier missing value records
+    
+    *By replacing the missing values by mean of interval averaged over all the days the Mean remains the same as earlier whereas the Median increases by 1
+    
+
+ Differences in activity patterns between weekdays and weekends
+---------------------------------------------------------------
+
+  *Creating new factor variable in the dataset with teo levels*
+  
+    *Using the dataset treated for missing values
+    *Displaying the top 6 rows
+    
+```{r flag,echo=TRUE}
+  df9<-df7
+  df9$flag <- as.factor(ifelse(weekdays(df7$date) %in% c("Saturday","Sunday"),"weekend","weekday"))
+  head(df9)
+```
+
+  *Creating panel plot*
+  
+    *Aggregating the data to determine the mean at Time interval - Weekday Flag level
+    
+```{r aggregatinglevels,echo=TRUE}
+   df10<- aggregate(df9$steps,df9[c(1,4)],mean)
+```
+
+    *Creating the panel plots
+```{r panelplot,echo=TRUE}
+library(lattice)
+xyplot(x ~ interval | flag,data=df10,layout=c(1,2),type="l",xlab="Interval",ylab="Number of steps")
+```
 
 
-
-## Imputing missing values
-
-
-
-## Are there differences in activity patterns between weekdays and weekends?
+  *End of Assignment*
